# Generated by Django 6.0 on 2026-05-20 21:40

import django.contrib.auth.models
import django.contrib.auth.validators
import django.core.validators
import django.db.models.deletion
import django.utils.timezone
import phonenumber_field.modelfields
import val_estagio.validators
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auth', '0012_alter_user_first_name_max_length'),
    ]

    operations = [
        migrations.CreateModel(
            name='Usuario',
            fields=[
                ('password', models.CharField(max_length=128, verbose_name='password')),
                ('last_login', models.DateTimeField(blank=True, null=True, verbose_name='last login')),
                ('is_superuser', models.BooleanField(default=False, help_text='Designates that this user has all permissions without explicitly assigning them.', verbose_name='superuser status')),
                ('username', models.CharField(error_messages={'unique': 'A user with that username already exists.'}, help_text='Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.', max_length=150, unique=True, validators=[django.contrib.auth.validators.UnicodeUsernameValidator()], verbose_name='username')),
                ('first_name', models.CharField(blank=True, max_length=150, verbose_name='first name')),
                ('last_name', models.CharField(blank=True, max_length=150, verbose_name='last name')),
                ('email', models.EmailField(blank=True, max_length=254, verbose_name='email address')),
                ('is_staff', models.BooleanField(default=False, help_text='Designates whether the user can log into this admin site.', verbose_name='staff status')),
                ('is_active', models.BooleanField(default=True, help_text='Designates whether this user should be treated as active. Unselect this instead of deleting accounts.', verbose_name='active')),
                ('date_joined', models.DateTimeField(default=django.utils.timezone.now, verbose_name='date joined')),
                ('unidade', models.CharField(choices=[('barra', 'Barra'), ('botafogo', 'Botafogo')], max_length=20)),
                ('matricula', models.CharField(max_length=12, primary_key=True, serialize=False)),
                ('groups', models.ManyToManyField(blank=True, help_text='The groups this user belongs to. A user will get all permissions granted to each of their groups.', related_name='user_set', related_query_name='user', to='auth.group', verbose_name='groups')),
                ('user_permissions', models.ManyToManyField(blank=True, help_text='Specific permissions for this user.', related_name='user_set', related_query_name='user', to='auth.permission', verbose_name='user permissions')),
            ],
            options={
                'verbose_name': 'user',
                'verbose_name_plural': 'users',
                'abstract': False,
            },
            managers=[
                ('objects', django.contrib.auth.models.UserManager()),
            ],
        ),
        migrations.CreateModel(
            name='Curso',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nome', models.CharField(choices=[('administração', 'Administração'), ('analise e desenvolvimento de sistemas', 'Análise e Desenvolvimento de Sistemas'), ('arquitetura e urbanismo', 'Arquitetura e Urbanismo'), ('ciencia de dados e inteligencia artificial', 'Ciência de Dados e Inteligência Artificial'), ('ciencias contabeis', 'Ciências Contábeis'), ('direito', 'Direito'), ('ciencias economicas', 'Ciências Econômicas'), ('comunicacao social - publicidade e propaganda', 'Comunicação Social - Publicidade e Propaganda'), ('engenharia civil', 'Engenharia Civil'), ('engenharia de producao', 'Engenharia de Produção'), ('engenharia da computacao', 'Engenharia da Computação'), ('engenharia de software', 'Engenharia de Software'), ('relacoes internacionais', 'Relações Internacionais')], max_length=100, unique=True)),
            ],
        ),
        migrations.CreateModel(
            name='Empresa',
            fields=[
                ('nome', models.CharField(max_length=255)),
                ('telefone', phonenumber_field.modelfields.PhoneNumberField(max_length=128, region='BR')),
                ('cep', models.CharField(max_length=9)),
                ('uf', models.CharField(max_length=2)),
                ('cidade', models.CharField(max_length=100)),
                ('log', models.CharField(max_length=255, verbose_name='Logradouro')),
                ('comp', models.CharField(blank=True, max_length=100, null=True, verbose_name='Complemento')),
                ('num', models.CharField(max_length=20, verbose_name='Número')),
                ('bairro', models.CharField(max_length=100)),
                ('cnpj', models.CharField(max_length=18, primary_key=True, serialize=False, validators=[val_estagio.validators.validar_cnpj])),
            ],
        ),
        migrations.CreateModel(
            name='Tce',
            fields=[
                ('apoliceseguro', models.CharField(max_length=50, primary_key=True, serialize=False)),
                ('bolsa', models.DecimalField(blank=True, decimal_places=2, max_digits=10, null=True)),
            ],
        ),
        migrations.CreateModel(
            name='Aluno',
            fields=[
                ('usuario', models.OneToOneField(db_column='matricula', on_delete=django.db.models.deletion.CASCADE, primary_key=True, serialize=False, to=settings.AUTH_USER_MODEL)),
                ('telefone', phonenumber_field.modelfields.PhoneNumberField(max_length=128, region='BR')),
                ('cpf', models.CharField(max_length=14, unique=True, validators=[val_estagio.validators.validar_cpf])),
                ('dt_nascimento', models.DateField()),
                ('procurando_estagio', models.BooleanField(default=False)),
                ('horas_estagio', models.IntegerField(default=0)),
                ('periodo', models.PositiveIntegerField()),
                ('curso', models.ForeignKey(db_column='id_curso', on_delete=django.db.models.deletion.PROTECT, to='val_estagio.curso')),
            ],
        ),
        migrations.CreateModel(
            name='Secretaria',
            fields=[
                ('usuario', models.OneToOneField(db_column='matricula', on_delete=django.db.models.deletion.CASCADE, primary_key=True, serialize=False, to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='Coordenador',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('area', models.CharField(choices=[('negocios', 'Negócios'), ('tecnologia', 'Tecnologia'), ('financas', 'Finanças'), ('direito', 'Direito'), ('engenharia', 'Engenharia')], max_length=100)),
                ('usuario', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'Coordenador',
                'verbose_name_plural': 'Coordenadores',
            },
        ),
        migrations.CreateModel(
            name='Estagio',
            fields=[
                ('idestagio', models.AutoField(primary_key=True, serialize=False)),
                ('dtinicio', models.DateField()),
                ('dtfim', models.DateField(blank=True, null=True)),
                ('cargahorariasemanal', models.IntegerField()),
                ('empresa', models.ForeignKey(db_column='cnpj', on_delete=django.db.models.deletion.PROTECT, to='val_estagio.empresa')),
                ('tce', models.ForeignKey(db_column='apolice_seguro', on_delete=django.db.models.deletion.PROTECT, to='val_estagio.tce')),
            ],
        ),
        migrations.AddField(
            model_name='tce',
            name='aluno',
            field=models.ForeignKey(db_column='matricula_aluno', on_delete=django.db.models.deletion.CASCADE, to='val_estagio.aluno'),
        ),
        migrations.CreateModel(
            name='RelatorioSemestral',
            fields=[
                ('status', models.CharField(choices=[('pendente', 'Pendente'), ('aprovado', 'Aprovado'), ('reprovado', 'Reprovado')], default='pendente', max_length=20)),
                ('idrelatorio', models.AutoField(primary_key=True, serialize=False)),
                ('data_envio', models.DateField()),
                ('semestre', models.CharField(max_length=4, validators=[django.core.validators.RegexValidator(message='O semestre deve estar no formato 26.1 ou 26.2', regex='^\\d{2}\\.[12]$')])),
                ('horas_estagiadas', models.PositiveIntegerField()),
                ('estagio', models.ForeignKey(db_column='id_estagio', on_delete=django.db.models.deletion.CASCADE, to='val_estagio.estagio')),
                ('coordenador', models.ForeignKey(db_column='matricula_coordenador', on_delete=django.db.models.deletion.CASCADE, to='val_estagio.aluno')),
            ],
        ),
        migrations.AddField(
            model_name='tce',
            name='secretaria',
            field=models.ForeignKey(db_column='matricula_secretaria', on_delete=django.db.models.deletion.PROTECT, to='val_estagio.secretaria'),
        ),
    ]
