@startuml diagrama_estagio_django

skinparam classAttributeIconSize 0
skinparam monochrome true
hide circle

' ─────────────────────────────
'  USUÁRIO E HERANÇA
' ─────────────────────────────

class Usuario {
  + matricula : String
  + senha : String
  + nome : String
  + email : String
}

class Secretaria {
  ' Herda os atributos de Usuario
}

class Aluno {
  + cpf : String
  + dtnascimento : Date
  + procurandoestagio : Boolean
  + horaestagio : Integer
  + periodo : Integer
}

class Coordenador {
  + area : String
}

' ─────────────────────────────
'  ENTIDADES PRINCIPAIS
' ─────────────────────────────

class Curso {
  + idcurso : Integer
  + nomecurso : String
}

class Empresa {
  + cnpj : String
  + nome : String
  + cep : String
  + uf : String
  + cidade : String
  + log : String
  + comp : String
  + num : String
  + bairro : String
}

class TCE {
  + anpoliceseguro : String
  + bolsa : Float
}

class Estagio {
  + idestagio : Integer
  + dtinicio : Date
  + dtfim : Date
  + cargahorariasemanal : Integer
}

class RelatorioSemestral {
  + idrelatorio : Integer
  + dataenvio : Date
  + semestre : String
  + horasestagio : Integer
}

' ─────────────────────────────
'  HERANÇA
' ─────────────────────────────

Usuario <|-- Secretaria
Usuario <|-- Aluno
Usuario <|-- Coordenador

' ─────────────────────────────
'  ASSOCIAÇÕES (Foreign Keys)
' ─────────────────────────────

Aluno "*" -- "1" Curso : pertence a >
Curso "*" -- "1" Coordenador : gerenciado por >

TCE "*" -- "1" Secretaria : assinado por >
TCE "*" -- "1" Aluno : pertence a >

Estagio "*" -- "1" TCE : vinculado a >
Estagio "*" -- "1" Empresa : realizado em >

RelatorioSemestral "*" -- "1" Aluno : enviado por >
RelatorioSemestral "*" -- "1" Estagio : referente a >

@enduml